# Kestrel

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  PRIVACY.md  README.md  app.manifest  app.rc  makefile
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  frame_source.yml
.github/workflows/: ci.yml  release.yml
include/: BatteryInfo.h  app_identity_bi.h  autostart_bi.h  capture_bi.h  capture_manager_bi.h  dpi_bi.h  draw_batteryinfo_bi.h  etw_bi.h  frame_stats_bi.h  hotkey_manager_bi.h  hud_bi.h  i18n_bi.h  init_d2d1_bi.h  init_dwrite_bi.h  interfaces_bi.h  logger_bi.h  main.h  overlay_bi.h  paths_bi.h  pch.h.in  resource_bi.h  resource_usage_bi.h  settings_bi.h  tray_icon_bi.h  update_bi.h
lang/: example.lang
packaging/: README.md
packaging/chocolatey/: kestrel.nuspec
packaging/chocolatey/tools/: chocolateyinstall.ps1
packaging/msix/: AppxManifest.xml  README.md  build-msix.ps1
packaging/scoop/: kestrel.json
packaging/winget/: semiloker.Kestrel.installer.yaml  semiloker.Kestrel.locale.en-US.yaml  semiloker.Kestrel.yaml
src/: BatteryInfo.cpp  autostart_bi.cpp  capture_bi.cpp  capture_manager_bi.cpp  dpi_bi.cpp  draw_batteryinfo_bi.cpp  etw_bi.cpp  frame_stats_bi.cpp  hotkey_manager_bi.cpp  hud_bi.cpp  i18n_bi.cpp  init_d2d1_bi.cpp  init_dwrite_bi.cpp  logger_bi.cpp  main.cpp  overlay_bi.cpp  paths_bi.cpp  resource_usage_bi.cpp  settings_bi.cpp  tray_icon_bi.cpp  update_bi.cpp
tests/: test_hud_series.cpp
tools/: check_style.py  make_logo.py
